# Code-Agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  development.md  evaluation.md  product-spec.md  security.md  tool-protocol.md
docs/superpowers/plans/: 2026-05-04-terminal-code-agent.md
docs/superpowers/specs/: 2026-05-04-terminal-code-agent-design.md
skills/code/: SKILL.md
src/code_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  context.py  conversation.py  env.py  graph.py  mcp_client.py  mcp_server.py  models.py  patches.py  prompting.py  providers.py  react.py  security.py  session.py  skill_selection.py  skills.py  terminal.py  tools.py
src/code_agent/prompts/: __init__.py  system.md
src/code_agent/tools/: __init__.py  base.py  files.py  shell.py  skills.py
src/terminal_code_agent/: __init__.py  __main__.py  cli.py  config.py  graph.py  llm.py  logging_utils.py  prompts.py  schemas.py  state.py  token_budget.py  tool_gate.py  tool_runtime.py  tools.py
tests/: test_cli.py  test_cli_approval.py  test_config.py  test_context.py  test_env.py  test_graph.py  test_graph_routes.py  test_llm.py  test_logging_utils.py  test_mcp_examples.py  test_output_schema.py  test_patches.py  test_prompts.py  test_providers.py  test_react.py  test_skills.py  test_terminal.py  test_token_budget.py  test_tool_gate.py  test_tool_summary.py  test_tools.py  test_tools_path_safety.py
