[project]
name = "code-agent"
version = "0.1.0"
description = "A terminal-first AI coding agent with repo-aware context, safe tools, patch review, and test feedback."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1,<2",
]

[project.optional-dependencies]
ui = [
    "rich>=13.7",
    "typer>=0.12",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
code-agent = "code_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
