[project]
name = "terminal-code-agent"
version = "0.1.0"
description = "A terminal code agent built with LangChain and LangGraph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.0",
    "langchain-openai>=1.1,<2.0",
    "langgraph>=1.1,<2.0",
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "tiktoken>=0.8",
]

[project.optional-dependencies]
sqlite = ["langgraph-checkpoint-sqlite>=2.0"]

[project.scripts]
terminal-code-agent = "terminal_code_agent.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/terminal_code_agent"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
